Fix subtask element wrapper button getting squished

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -276,6 +276,10 @@ input[type="checkbox"]:checked+label {
     margin-bottom: var(--default-form-margin);
 }
 
+.subtask-element-wrapper>p {
+    width: 100%;
+}
+
 .subtask-element-wrapper>button {
     width: 30px;
     height: 30px;
